# truckflow-pos

./: .gitignore  .vercelignore  README.md  guide.md  index.html  metadata.json  order.html  package-lock.json  package.json  render-deploy.md  render.yaml  vercel.json  vite.config.ts
.github/workflows/: backend-ghcr.yml  frontend-pages.yml
backend/: Dockerfile  docker-compose.yml  pyproject.toml  pytest_debug.txt  pytest_debug_decoded.txt  pytest_full_log.txt  pytest_run2.txt  pytest_run2_decoded.txt  requirements.txt
backend/src/: main.py
backend/src/auth/: permissions.py
backend/src/core/: database.py  outbox.py
backend/src/models/: outbox.py
backend/src/modules/: __init__.py
backend/src/modules/auth/: blacklist.py  dependencies.py  jwt_utils.py  permissions.py  router.py
backend/src/modules/customer_order/: models.py  router.py
backend/src/modules/inventory/: bom_engine.py  handlers.py  models.py  router.py  sync_router.py
backend/src/modules/print/: router.py  service.py
backend/src/modules/sales/: __init__.py  models.py  router.py
backend/src/modules/storage/: __init__.py  contracts.py  factory.py  inventory_repositories.py  repositories.py  services.py
backend/src/worker/: celery_app.py
backend/tests/: test_api.py  test_inventory_sync.py
gas-backend/: Auth.gs  Code.gs  Config.gs  CustomerOrders.gs  DEPLOY.md  Inventory.gs  README.md  Sales.gs  Setup.gs  Sheets.gs  Sync.gs
infra/: init.sql
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx  order-main.tsx
src/auth/: AuthContext.tsx  LoginScreen.tsx  authApi.ts  (+2 more)
(+41 files in other folders)
